--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
       justify-content:center;
       padding:32px;
       color:var(--muted);
-      overflow:hidden;
+      flex-direction: column;
+      min-height: 100vh;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch; /* biar halus di HP */
     }
+
 
     .card{
       width:100%;
