--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <script>
     // ---- teks ucapan (yang sudah kamu setujui) ----
     const lines = [
-`Selamat ulang tahun, Araa.
+`Selamat ulang tahun, Sayanggg.
 Terima kasih sudah hadir dan membuat hari-hariku lebih bermakna.
 Aku harap tahun ini membawa banyak hal baik untukmu — tawa, ketenangan, dan semua impian yang kamu kejar.
 Tetap jadi kamu yang hangat dan berani, ya.`,
