--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <!-- background audio (keamanan browser: memainkan setelah interaksi) -->
   <audio id="bgAudio" loop preload="auto">
     <!-- Jika ingin ganti musik, gantikan src di bawah -->
-    <source src="https://screenapp.io/app/v/antSNKkRRK" type="audio/mpeg">
+    <source src="https://shrill-brown-n3vk3axyyl.edgeone.app/happy-birthday-on-piano-121400.mp3" type="audio/mpeg">
   </audio>
 
   <script>
